@@ -140,5 +140,9 @@ S3method("plot.roc", "smooth.roc")
 S3method("plot.roc", "formula")
 S3method("plot.roc", "default")
 
+# Generic ggplot from ggplot2
+importFrom(ggplot2, ggplot)
+S3method("ggplot", "roc")
+
 import(plyr, methods, utils, Rcpp)
 useDynLib(pROC)
